# chat_gpt_clone

./: .gitignore  Cargo.toml  package-lock.json  readme.md  todo.md
chat_gpt/: Cargo.toml
chat_gpt/src/: lib.rs
client/: index.html  next.config.mjs  package-lock.json  package.json  vite.config.ts
client/app/: ChatView.tsx  SideBar.tsx  globals.css  page.tsx
client/src/: App.tsx  ChatView2.tsx  main.tsx
client/src/components/: Navbar.tsx
client/src/components/ChatPage/: ChatLayout.tsx  ChatView.tsx  SideBar.tsx  SwitchService.tsx  TextArea.tsx
client/src/lib/: ChatGPT.tsx
client_app/: package-lock.json  package.json
client_app/src/: App.tsx
lib_chat_gpt/: Cargo.toml
lib_chat_gpt/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/crud_json/: crud.rs  mod.rs  route.rs
