[workspace]
members = ["lib_chat_gpt", "server"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.8.0"
actix-files = "0.6.6"
anyhow = "1.0.86"
env_logger = "0.11.3"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
