[package]
name = "chat_gpt_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
env_logger.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
actix-cors = "0.7.0"
lib_chat_gpt = { path = "../lib_chat_gpt" }
encoding_rs = "0.8.34"
